// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
[
  {
    "abbr": "SGCA",
    "citation": "[2021] SGCA 34",
    "index": 0,
    "jurisdiction": "SG",
    "type": "case-citation",
    "year": "2021",
  },
]
`;

exports[` 2`] = `
[
  {
    "abbr": "SGHC",
    "citation": "[2020] SGHC 228",
    "index": 0,
    "jurisdiction": "SG",
    "type": "case-citation",
    "year": "2020",
  },
]
`;

exports[` 3`] = `
[
  {
    "abbr": "SGHC",
    "citation": "[2020] SGHC 100",
    "index": 0,
    "jurisdiction": "SG",
    "type": "case-citation",
    "year": "2020",
  },
]
`;

exports[` 4`] = `
[
  {
    "abbr": "SLR",
    "citation": "[2011] 2 SLR 47",
    "index": 0,
    "jurisdiction": "SG",
    "type": "case-citation",
    "year": "2011",
  },
]
`;

exports[` 5`] = `
[
  {
    "abbr": "SGDC",
    "citation": "[2020] SGDC 95",
    "index": 0,
    "jurisdiction": "SG",
    "type": "case-citation",
    "year": "2020",
  },
]
`;

exports[` 6`] = `
[
  {
    "abbr": "SGCA",
    "citation": "[1994] SGCA 128",
    "index": 0,
    "jurisdiction": "SG",
    "type": "case-citation",
    "year": "1994",
  },
]
`;

exports[` 7`] = `
[
  {
    "abbr": "SGCA",
    "citation": "[1988] SGCA 16",
    "index": 0,
    "jurisdiction": "SG",
    "type": "case-citation",
    "year": "1988",
  },
]
`;

exports[` 8`] = `
[
  {
    "abbr": "SLR",
    "citation": "[2001] 2 SLR 253",
    "index": 0,
    "jurisdiction": "SG",
    "type": "case-citation",
    "year": "2001",
  },
]
`;

exports[` 9`] = `
[
  {
    "abbr": "SLR",
    "citation": "[2001] 2 SLR 253",
    "index": 0,
    "jurisdiction": "SG",
    "type": "case-citation",
    "year": "2001",
  },
]
`;

exports[` 10`] = `
[
  {
    "abbr": "SGIPOS",
    "citation": "[2022] SGIPOS 4",
    "index": 0,
    "jurisdiction": "SG",
    "type": "case-citation",
    "year": "2022",
  },
]
`;

exports[` 11`] = `
[
  {
    "abbr": "SGHCR",
    "citation": "[2022] SGHCR 1",
    "index": 0,
    "jurisdiction": "SG",
    "type": "case-citation",
    "year": "2022",
  },
]
`;

exports[` 12`] = `
[
  {
    "abbr": "SGHCF",
    "citation": "[2020] SGHCF 18",
    "index": 0,
    "jurisdiction": "SG",
    "type": "case-citation",
    "year": "2020",
  },
]
`;

exports[` 13`] = `
[
  {
    "abbr": "SGHC(A)",
    "citation": "[2022] SGHC(A) 17",
    "index": 0,
    "jurisdiction": "SG",
    "type": "case-citation",
    "year": "2022",
  },
]
`;

exports[` 14`] = `
[
  {
    "abbr": "SGCA(I)",
    "citation": "[2020] SGCA(I) 2",
    "index": 0,
    "jurisdiction": "SG",
    "type": "case-citation",
    "year": "2020",
  },
]
`;

exports[` 15`] = `
[
  {
    "abbr": "Ves Sen",
    "citation": "(1754) 2 Ves Sen 547",
    "index": 0,
    "jurisdiction": "UK",
    "type": "case-citation",
    "year": "1754",
  },
]
`;

exports[` 16`] = `
[
  {
    "abbr": "All ER",
    "citation": "[1843-60] All ER 249",
    "index": 0,
    "jurisdiction": "UK",
    "type": "case-citation",
    "year": "1843",
  },
]
`;

exports[` 17`] = `
[
  {
    "abbr": "KB",
    "citation": "[1948] 1 KB 223",
    "index": 0,
    "jurisdiction": "UK",
    "type": "case-citation",
    "year": "1948",
  },
]
`;

exports[` 18`] = `
[
  {
    "abbr": "QB",
    "citation": "[1965] 1 QB 456",
    "index": 0,
    "jurisdiction": "UK",
    "type": "case-citation",
    "year": "1965",
  },
]
`;

exports[` 19`] = `
[
  {
    "abbr": "Cr App R",
    "citation": "(1951) 35 Cr App R 164",
    "index": 0,
    "jurisdiction": "UK",
    "type": "case-citation",
    "year": "1951",
  },
]
`;

exports[` 20`] = `
[
  {
    "abbr": "UKHL",
    "citation": "[2007] UKHL 17",
    "index": 0,
    "jurisdiction": "UK",
    "type": "case-citation",
    "year": "2007",
  },
]
`;

exports[` 21`] = `
[
  {
    "abbr": "UKIPO",
    "citation": "O/328/22",
    "index": 0,
    "jurisdiction": "UK",
    "type": "case-citation",
    "year": "2022",
  },
]
`;

exports[` 22`] = `
[
  {
    "abbr": "UKIPO",
    "citation": "O/002/22",
    "index": 0,
    "jurisdiction": "UK",
    "type": "case-citation",
    "year": "2022",
  },
]
`;

exports[` 23`] = `
[
  {
    "abbr": "UKIPO",
    "citation": "O01422",
    "index": 0,
    "jurisdiction": "UK",
    "type": "case-citation",
    "year": "2022",
  },
]
`;

exports[` 24`] = `
[
  {
    "abbr": "EWHC",
    "citation": "[2021] EWHC 2168",
    "index": 0,
    "jurisdiction": "UK",
    "type": "case-citation",
    "year": "2021",
  },
]
`;

exports[` 25`] = `
[
  {
    "abbr": "EWHC",
    "citation": "[2016] EWHC 3151",
    "index": 0,
    "jurisdiction": "UK",
    "type": "case-citation",
    "year": "2016",
  },
]
`;

exports[` 26`] = `
[
  {
    "abbr": "ECDR",
    "citation": "[2001] ECDR 5",
    "index": 0,
    "jurisdiction": "UK",
    "type": "case-citation",
    "year": "2001",
  },
]
`;

exports[` 27`] = `
[
  {
    "citation": "C-40/17",
    "court": "CJEU",
    "index": 0,
    "jurisdiction": "EU",
    "type": "case-citation",
  },
]
`;

exports[` 28`] = `
[
  {
    "citation": "C-403/08",
    "court": "CJEU",
    "index": 6,
    "jurisdiction": "EU",
    "type": "case-citation",
  },
  {
    "citation": "C-429/08",
    "court": "CJEU",
    "index": 19,
    "jurisdiction": "EU",
    "type": "case-citation",
  },
]
`;

exports[` 29`] = `
[
  {
    "citation": "C-145/10",
    "court": "CJEU",
    "index": 2,
    "jurisdiction": "EU",
    "type": "case-citation",
  },
]
`;

exports[` 30`] = `
[
  {
    "citation": "C-5/08",
    "court": "CJEU",
    "index": 2,
    "jurisdiction": "EU",
    "type": "case-citation",
  },
]
`;

exports[` 31`] = `
[
  {
    "abbr": "FCA",
    "citation": "[2010] FCA 984",
    "index": 0,
    "jurisdiction": "AU",
    "type": "case-citation",
    "year": "[2010]",
  },
]
`;

exports[` 32`] = `
[
  {
    "abbr": "CLR",
    "citation": "(1990) 171 CLR 30",
    "index": 0,
    "jurisdiction": "AU",
    "type": "case-citation",
    "year": "(1990)",
  },
]
`;

exports[` 33`] = `
[
  {
    "abbr": "ACSR",
    "citation": "(1992) 7 ACSR 759",
    "index": 0,
    "jurisdiction": "AU",
    "type": "case-citation",
    "year": "(1992)",
  },
]
`;

exports[` 34`] = `
[
  {
    "abbr": "ALJ",
    "citation": "(2003) 200 ALJ 1",
    "index": 0,
    "jurisdiction": "AU",
    "type": "case-citation",
    "year": "(2003)",
  },
]
`;

exports[` 35`] = `
[
  {
    "abbr": "HCA",
    "citation": "[1989] HCA 9",
    "index": 0,
    "jurisdiction": "AU",
    "type": "case-citation",
    "year": "[1989]",
  },
]
`;

exports[` 36`] = `
[
  {
    "abbr": "ACLR",
    "citation": "(1982) 7 ACLR 171",
    "index": 0,
    "jurisdiction": "AU",
    "type": "case-citation",
    "year": "(1982)",
  },
]
`;

exports[` 37`] = `
[
  {
    "citation": "[1999] 2 SCR 534",
    "index": 0,
    "jurisdiction": "CA",
    "type": "case-citation",
  },
]
`;

exports[` 38`] = `
[
  {
    "citation": "(2008) 91 OR (3d) 353",
    "index": 0,
    "jurisdiction": "CA",
    "type": "case-citation",
  },
]
`;

exports[` 39`] = `
[
  {
    "citation": "(1973) 40 DLR (3d) 371",
    "index": 0,
    "jurisdiction": "CA",
    "type": "case-citation",
  },
]
`;

exports[` 40`] = `
[
  {
    "citation": "[1983] 4 WWR 762",
    "index": 0,
    "jurisdiction": "CA",
    "type": "case-citation",
  },
]
`;

exports[`Finder [2021] SGCA 34 1`] = `
[
  {
    "citation": "[2006] SCC 39",
    "index": 0,
    "jurisdiction": "CA",
    "type": "case-citation",
  },
]
`;

exports[`Finder [2021] SGCA 34 2`] = `
[
  {
    "citation": "2022 SCC 38",
    "index": 0,
    "jurisdiction": "CA",
    "type": "case-citation",
  },
]
`;

exports[`Finder [2021] SGCA 34 3`] = `
[
  {
    "citation": "2008 ONCA 506",
    "index": 0,
    "jurisdiction": "CA",
    "type": "case-citation",
  },
]
`;

exports[`Finder [2021] SGCA 34 4`] = `
[
  {
    "citation": "(2013) 16 HKCFAR 366",
    "index": 0,
    "jurisdiction": "HK",
    "type": "case-citation",
  },
]
`;

exports[`Finder [2021] SGCA 34 5`] = `
[
  {
    "citation": "[2015] HKCFI 1856",
    "index": 0,
    "jurisdiction": "HK",
    "type": "case-citation",
  },
]
`;

exports[`Finder [2021] SGCA 34 6`] = `
[
  {
    "citation": "[1999] HKCA 585",
    "index": 0,
    "jurisdiction": "HK",
    "type": "case-citation",
  },
]
`;

exports[`Finder [2021] SGCA 34 7`] = `
[
  {
    "citation": "[2000] 1 HKLRD 595",
    "index": 0,
    "jurisdiction": "HK",
    "type": "case-citation",
  },
]
`;

exports[`Finder [2021] SGCA 34 8`] = `
[
  {
    "citation": "[2012] HKDC 911",
    "index": 0,
    "jurisdiction": "HK",
    "type": "case-citation",
  },
]
`;
